@@ -3,7 +3,10 @@
 * New features
 
   * XML::Node#to_str
-  * XML::Document#url
+  * XML::Document#url get the document url
+  * XML::Node#keys get all attribute names
+  * XML::Node#values get all attribute values
+  * XML::Node#each iterate over attribute name, value pairs
 
 * Bugfixes
 
